--- a/provaCompiler.ipynb
+++ b/provaCompiler.ipynb
@@ -355,9 +355,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "['pl' 'py' 'txt' 'html' 'c' 'rb' 'php' 'cpp' 'js' 'sh' 'pm' 'cs' 'g' 'ps1'\n 'xhtml' 'svg' 'md' 'asp' 'asm' 'jar']\ntxt      667\nhtml     385\npy       372\npl       267\nc        196\nrb       182\ncpp       98\nphp       52\njs        52\ncs        15\nps1        4\nsh         3\npm         3\nasp        2\nmd         2\ng          1\njar        1\nsvg        1\nasm        1\nxhtml      1\nName: type_of_exploit, dtype: int64\n"
+     ]
+    }
+   ],
    "source": [
     "# print(df['type_of_exploit'].apply(lambda col: col.unique()))\n",
     "# df\n",
