--- a/clustering.ipynb
+++ b/clustering.ipynb
@@ -125,11 +125,65 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "['']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df['product'].unique())"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Save to csv\n",
     "df.to_csv(r'datasets/product_cveid.csv', index = False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "       product            cve_id\n",
+       "0          NaN  CVE-2019-1000020\n",
+       "1          NaN  CVE-2019-1000019\n",
+       "2          NaN  CVE-2019-1000018\n",
+       "3          NaN    CVE-2019-17362\n",
+       "4          NaN    CVE-2019-16943\n",
+       "...        ...               ...\n",
+       "51243      NaN     CVE-1999-0022\n",
+       "51244      NaN     CVE-1999-0018\n",
+       "51245      NaN     CVE-1999-0009\n",
+       "51246      NaN     CVE-1999-0008\n",
+       "51247      NaN     CVE-1999-0003\n",
+       "\n",
+       "[51248 rows x 2 columns]"
+      ],
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>product</th>\n      <th>cve_id</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>NaN</td>\n      <td>CVE-2019-1000020</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>NaN</td>\n      <td>CVE-2019-1000019</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>NaN</td>\n      <td>CVE-2019-1000018</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>NaN</td>\n      <td>CVE-2019-17362</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>NaN</td>\n      <td>CVE-2019-16943</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>51243</th>\n      <td>NaN</td>\n      <td>CVE-1999-0022</td>\n    </tr>\n    <tr>\n      <th>51244</th>\n      <td>NaN</td>\n      <td>CVE-1999-0018</td>\n    </tr>\n    <tr>\n      <th>51245</th>\n      <td>NaN</td>\n      <td>CVE-1999-0009</td>\n    </tr>\n    <tr>\n      <th>51246</th>\n      <td>NaN</td>\n      <td>CVE-1999-0008</td>\n    </tr>\n    <tr>\n      <th>51247</th>\n      <td>NaN</td>\n      <td>CVE-1999-0003</td>\n    </tr>\n  </tbody>\n</table>\n<p>51248 rows × 2 columns</p>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 74
+    }
+   ],
+   "source": [
+    "# Load from csv\n",
+    "product_cveid = pd.read_csv(\"datasets/product_cveid.csv\")\n",
+    "product_cveid"
    ]
   },
   {
