join of datafrakes

--- a/clustering.ipynb
+++ b/clustering.ipynb
@@ -4155,6 +4155,23 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "execute code               32823\ndenial of service          23712\noverflow                   18216\nxss                        15303\ngain information           10999\nsql injection               7853\nbypass                      6390\nmemory corruption           5339\ngain privilege              5122\ndirectory traversal         4132\ncsrf                        2521\nfile inclusion              2235\nhttp response splitting      166\nName: type, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df['type'].value_counts())"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 67,
    "metadata": {},
    "outputs": [],
