get_dataframe_product_type

--- a/get_vulnerabilities.ipynb
+++ b/get_vulnerabilities.ipynb
@@ -217,23 +217,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
+    "def get_dataframe_product(df,product_name):\n",
+    "    return df.loc[df['product'] == product_name]\n",
+    "def get_dataframe_type(df,type_name):\n",
+    "    return df.loc[df['type'] == type_name]\n",
+    "def get_dataframe_product_type(df,product_name,type_name):\n",
+    "    return df.loc[df['product'] == product_name].loc[df['type'] == type_name]\n",
     "'''\n",
     "TODO\n",
-    "- functions to select only certain products\n",
-    "- functions to select only certain type\n",
-    "- combo of the previous 2\n",
-    "'''"
+    "- canonization of type, product\n",
+    "- change input dataframe, not only exploit with windows\n",
+    "'''\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "           type          cve_id       product  exploit_db_id  \\\n",
+       "1  execute code  CVE-2018-11529  Debian Linux          45626   \n",
+       "\n",
+       "                                             exploit type_of_exploit  \n",
+       "1  ##\\n# This module requires Metasploit: https:/...              rb  "
+      ],
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>type</th>\n      <th>cve_id</th>\n      <th>product</th>\n      <th>exploit_db_id</th>\n      <th>exploit</th>\n      <th>type_of_exploit</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>1</th>\n      <td>execute code</td>\n      <td>CVE-2018-11529</td>\n      <td>Debian Linux</td>\n      <td>45626</td>\n      <td>##\\n# This module requires Metasploit: https:/...</td>\n      <td>rb</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 35
+    }
+   ],
+   "source": [
+    "a = get_dataframe_product_type(provajoin,'Debian Linux','execute code')\n",
+    "a"
    ]
   }
  ]
