--- a/SAFETorch/test.ipynb
+++ b/SAFETorch/test.ipynb
@@ -2,25 +2,27 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "# Test SAFEtorch pipeline"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "#ubuntu\n",
     "import sys \n",
     "sys.path.append('/home/mattia/Desktop/tesi_magistrale/SAFEtorch/SAFEtorch')"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "from utils.function_normalizer import FunctionNormalizer\n",
     "from utils.instructions_converter import InstructionsConverter\n",
@@ -29,24 +31,24 @@
     "from safetorch.safe_network import SAFE\n",
     "from safetorch.parameters import Config\n",
     "import torch"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# initialize SAFE\n",
     "config = Config()\n",
     "safe = SAFE(config)"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# load instruction converter and normalizer\n",
     "#ubuntu\n",
@@ -55,13 +57,13 @@
     "#I2V_FILENAME = \"SAFEtorch/model/word2id.json\"\n",
     "converter = InstructionsConverter(I2V_FILENAME)\n",
     "normalizer = FunctionNormalizer(max_instruction=150)"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# load SAFE weights\n",
     "#windows\n",
@@ -71,20 +73,20 @@
     "state_dict = torch.load(SAFE_torch_model_path)\n",
     "safe.load_state_dict(state_dict)\n",
     "safe = safe.eval()"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "# Create exploits_embeddings"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "#change these variables according to your setup\n",
     "#path to folder with exploits\n",
@@ -96,13 +98,13 @@
     "\n",
     "#path to embeddings_extractor script\n",
     "embeddings_extractor = 'embeddings_extractor.py'\n"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "'''\n",
     "from SAFEtorch.utils.function_normalizer import FunctionNormalizer\n",
@@ -139,39 +141,39 @@
     "    print(exe.replace('.exe','').replace(exploit_folder,'') + ' processed')\n",
     "    '''\n",
     "\n"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "torch.save(exploits_embeddings,'/media/mattia/2068D30968D2DC9A1/Users/matti/Desktop/Magistrale/tesi/poc_detection/temp_dir/exploits_embeddings_complete.pt')"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "exploits_embeddings = torch.load('/media/mattia/2068D30968D2DC9A1/Users/matti/Desktop/Magistrale/tesi/poc_detection/temp_dir/exploits_embeddings_complete.pt')\n",
     "print(exploits_embeddings)"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## Remove invalid entries in exploits_embeddings"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# remove invalid entries in exploits_embeddings\n",
     "from copy import deepcopy\n",
@@ -187,52 +189,52 @@
     "print(exploits_embeddings)\n",
     "# save exploits_embeddings as file\n",
     "#torch.save(exploits_embeddings,'/home/mattia/Desktop/tesi_magistrale/SAFEtorch/SAFEtorch/exploits_embeddings_complete.pt')"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "#Save clean exploits_embeddings\n",
     "torch.save(exploits_embeddings,'/media/mattia/2068D30968D2DC9A1/Users/matti/Desktop/Magistrale/tesi/poc_detection/temp_dir/exploits_embeddings_complete.pt')"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "# Load exploits_embeddings from file"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "#windows\n",
     "#exploits_embeddings = torch.load('C:\\\\Users\\\\matti\\\\Desktop\\\\Magistrale\\\\tesi\\\\poc_detection\\\\datasets\\\\exploits_embeddings_complete.pt')\n",
     "#ubuntu\n",
     "exploits_embeddings = torch.load('/media/mattia/2068D30968D2DC9A1/Users/matti/Desktop/Magistrale/tesi/poc_detection/temp_dir/exploits_embeddings_complete.pt')\n",
     "print('exploits_embeddings loaded')"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "exploits_embeddings"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "def cosine_similarity(fun1,fun2):\n",
     "    cos = torch.nn.CosineSimilarity(dim=1, eps=1e-6)\n",
@@ -252,15 +254,16 @@
     "exe = 'C:/Users/matti/Desktop/Magistrale/tesi/poc_detection/temp_dir/10102.exe'\n",
     "listone = !python $embeddings_extractor $exe\n",
     "print(listone)"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "821f77f8828e8180cefca8102545d12ca0833cd7d3d8d53e6ac19f9670a558a3"
+  },
   "kernelspec": {
-   "name": "python3",
-   "display_name": "Python 3.8.10 64-bit ('SAFEtorch': venv)"
+   "display_name": "Python 3.9.4 64-bit ('venv': venv)",
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -272,10 +275,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
-  },
-  "interpreter": {
-   "hash": "ba100f46a1b0843432bbeab94a8f4f549380c0a60c00481b6904b7664bb4f11d"
+   "version": "3.9.4"
   }
  },
  "nbformat": 4,
