--- a/SAFETorch/dataset_descriptor.ipynb
+++ b/SAFETorch/dataset_descriptor.ipynb
@@ -204,8 +204,29 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 64%|██████▎   | 633/993 [05:16<05:15,  1.14it/s]"
+      "100%|██████████| 993/993 [10:31<00:00,  1.57it/s]\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0              Loki\n",
+       "0    RedLineStealer\n",
+       "0        AgentTesla\n",
+       "0         RemcosRAT\n",
+       "0      Smoke Loader\n",
+       "          ...      \n",
+       "0        AgentTesla\n",
+       "0      Smoke Loader\n",
+       "0        AgentTesla\n",
+       "0              None\n",
+       "0              None\n",
+       "Name: signature, Length: 992, dtype: object"
+      ]
+     },
+     "execution_count": 106,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -237,73 +258,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "RedLineStealer     137\n",
-       "None               134\n",
-       "AgentTesla         105\n",
-       "Formbook            63\n",
-       "Loki                45\n",
-       "SnakeKeylogger      34\n",
-       "RemcosRAT           16\n",
-       "Smoke Loader        14\n",
-       "RaccoonStealer      13\n",
-       "NanoCore            12\n",
-       "GuLoader             9\n",
-       "njrat                7\n",
-       "ArkeiStealer         7\n",
-       "DCRat                6\n",
-       "AsyncRAT             6\n",
-       "AveMariaRAT          5\n",
-       "ParallaxRAT          5\n",
-       "DanaBot              5\n",
-       "BitRAT               5\n",
-       "CobaltStrike         5\n",
+       "RedLineStealer     201\n",
+       "None               174\n",
+       "AgentTesla         150\n",
+       "Formbook            91\n",
+       "Loki                68\n",
+       "SnakeKeylogger      51\n",
+       "RemcosRAT           23\n",
+       "Smoke Loader        20\n",
+       "NanoCore            20\n",
+       "RaccoonStealer      19\n",
+       "AsyncRAT            13\n",
+       "DCRat               12\n",
+       "GuLoader            12\n",
+       "njrat               11\n",
+       "BitRAT               9\n",
+       "ArkeiStealer         9\n",
+       "CobaltStrike         8\n",
+       "BazaLoader           8\n",
+       "DanaBot              7\n",
+       "AveMariaRAT          6\n",
+       "ParallaxRAT          6\n",
+       "GCleaner             5\n",
+       "TrickBot             5\n",
+       "CryptBot             5\n",
        "CoinMiner            4\n",
-       "GCleaner             4\n",
        "LimeRAT              4\n",
+       "Gozi                 4\n",
        "Pony                 4\n",
-       "TrickBot             4\n",
+       "NetWire              3\n",
        "OskiStealer          3\n",
-       "Gozi                 3\n",
-       "CryptBot             3\n",
-       "RevengeRAT           2\n",
+       "TeamBot              3\n",
+       "Stop                 3\n",
+       "AZORult              3\n",
        "NetSupport           2\n",
+       "FickerStealer        2\n",
+       "SystemBC             2\n",
        "Mercurial            2\n",
-       "RunningRAT           2\n",
-       "AZORult              2\n",
-       "TeamBot              2\n",
-       "Stop                 2\n",
        "FormBook             2\n",
-       "BazaLoader           2\n",
+       "RunningRAT           2\n",
+       "RevengeRAT           2\n",
+       "Neshta               2\n",
+       "DBatLoader           1\n",
        "Socelars             1\n",
        "CoinMiner.XMRig      1\n",
-       "NetWire              1\n",
-       "Neshta               1\n",
-       "Tofsee               1\n",
+       "WSHRAT               1\n",
        "Neurevt              1\n",
        "Amadey               1\n",
        "XpertRAT             1\n",
-       "SpectreRAT           1\n",
-       "FickerStealer        1\n",
-       "Adware.Generic       1\n",
        "Glupteba             1\n",
-       "WSHRAT               1\n",
-       "SystemBC             1\n",
+       "SpectreRAT           1\n",
+       "Tofsee               1\n",
+       "Adware.Generic       1\n",
+       "Dridex               1\n",
        "Name: signature, dtype: int64"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 107,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "malware_df['signature'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "malware_df.to_csv('../datasets/embeddings/malwarebazaar_description.csv', index=False)"
    ]
   },
   {
